objects/GCR_Approvers_Queues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Legal_Group_Email__c</fullName>
        <label>Legal Group Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Ids__c</fullName>
        <label>Approver Queue Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GCR Approvers Queues</label>
</CustomObject>